--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="A responsive product preview card built with semantic HTML and modern CSS. Perfect for beginners learning layout, typography, and accessibility—no JavaScript required.">
+    <title>Product Preview Card</title>
+    <link rel="icon" href="images/favicon-32x32.png" type="image/png">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <main>
+        <article class="card" aria-labelledby="product-title">
+            <div class="card__media">
+                <picture>
+                    <source media="(min-width: 768px)" srcset="images/image-product-desktop.jpg">
+                    <img src="images/image-product-mobile.jpg" alt="Gabrielle Essence Eau de Parfum, 50 ml bottle" class="card__image">
+                </picture>
+            </div>
+            <div class="card__body">
+                <p class="card__eyebrow">Perfume</p>
+                <h1 id="product-title" class="card__title">Gabrielle Essence Eau de Parfum</h1>
+                <p class="card__description">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+                <div class="card__pricing">
+                    <data class="card__price card__price--current" value="149.99">$149.99</data>
+                    <data class="card__price card__price--old" value="169.99"><del>$169.99</del></data>
+                </div>
+
+                <button type="button" class="button button--primary"
+                        aria-label="Add Gabrielle Essence Eau de Parfum to cart">
+                    <img src="images/icon-cart.svg" class="button__icon" alt="">
+                    <span class="button__text">Add to Cart</span>
+                </button>
+
+            </div>
+
+        </article>
+    </main>
 </body>
 </html>
