--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="A responsive product preview card built with semantic HTML and modern CSS. Perfect for beginners learning layout, typography, and accessibility—no JavaScript required.">
     <title>Product Preview Card</title>
     <link rel="icon" href="images/favicon-32x32.png" type="image/png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
